# hypnos

src/: .cvsignore  Doxyfile  Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  config.status  config.sub  configure  configure.in  hypnos.kdevelop  itemid.cpp  itemid.h  libtool  ltmain.sh  makefile.debug  makefile.inc  subdirs  svnignore
src/deprecated/: accounts.cpp  accounts.h  addmenu.cpp  addmenu.h  ai.cpp  ai.h  archive.cpp  archive.h  boats.cpp  boats.h  calendar.cpp  calendar.h  client.cpp  client.h  cmds.cpp  cmds.h  cmdtable.cpp  cmdtable.h  commands.cpp  commands.h  containers.cpp  containers.h  crontab.cpp  crontab.h  globals.cpp  globals.h  guild.cpp  guild.h  guilds.cpp  guildstones.cpp  house.cpp  house.h  html.cpp  item.cpp  item.h  jail.cpp  jail.h  misc-code.cpp  mount.cpp  packets.cpp  (+16 more)
src/deprecated/amx/: Makefile  amxcback.cpp  amxcback.h  amxfile.cpp  amxfile.h  amxvarserver.cpp  amxvarserver.h  amxwrap2.cpp  amxwraps.cpp  amxwraps.h
src/deprecated/guilds/: classes.h  constants.h
src/deprecated/python/: Makefile  characters.cpp  events.cpp  events.h  methods.cpp  misc.cpp
src/deprecated/races/: Makefile  race.cpp  race.h  raceability.cpp  raceability.h  racegender.cpp  racegender.h  racerequiredtype.cpp  racerequiredtype.h  racescriptentry.cpp  racescriptentry.h  raceskill.cpp  raceskill.h  racestartitem.h  racetokenizer.cpp  racetokenizer.h  racetype.cpp  racetype.h
src/doc/: AUTHORS.doxy  AUTHORS.txt  AdminTips.doxy  ChangeLog.doxy  ChangeLog.txt  LICENSE.doxy  PROTOCOL.doxy  STANDARDS.doxy  STANDARDS.txt  protocols.txt
src/includes/: Makefile.am  Makefile.in  aes.h  area.h  area.hpp  basics.h  calendar.h  classes.h  clock.h  clock.hpp  commands.h  commands.hpp  common_libs.h  common_libs.hpp  config.h.in  console.h  constants.h  constants.hpp  data.h  data.hpp  database.h  dbl_single_click.h  debug.h  dirs.h  dirs.hpp  dragdrop.h  effects.h  effects.hpp  encryption.h  enums.h  gamedate.h  gmpages.h  gmpages.hpp  hypnos.h  hypnos.hpp  inlines.h  inlines.hpp  logsystem.h  logsystem.hpp  magic.h  (+73 more)
src/includes/archetypes/: Makefile.am  Makefile.in  generic.h  generic.hpp  items.h  items.hpp
src/includes/archs/: Makefile.am  Makefile.in  console.h  console.hpp  daemon.h  hypunix.h  hypwin32.h  ntservice.h  ntservice.hpp  signals.h  signals.hpp  tinterface.h  tinterface.hpp  win32registry.h
src/includes/backend/: Makefile.am  Makefile.in  admincmds.h  admincmds.hpp  notify.h  scheduler.h  scheduler.hpp  scripting.h  scripting.hpp  sqlite.h  strconstants.h  strconstants.hpp
src/includes/encryption/: Makefile.am  Makefile.in  clientcrypt.h  clientcrypt.hpp  common.h  common.hpp  crypt.h  table.hpp
src/includes/extras/: Makefile.am  Makefile.in  bounty.h  bounty.hpp  jails.h  jails.hpp  loginserver.h  loginserver.hpp  motd.h  motd.hpp
src/includes/networking/: Makefile.am  Makefile.in  cclient.h  cclient.hpp  csocket.h  exceptions.h  exceptions.hpp  misccommand.h  misccommand.hpp  network.h  network.hpp  received.hpp  remadmin.h  sent.h  sent.hpp  tUOReceiver.h  tkiller.h  tkiller.hpp  tkilling.h  tlistening.h  tpllistener.h  tpllistener.hpp  traclistening.h  tracreceiver.h  tracreceiver.hpp  treceiving.h  tuoreceiver.h  tuoreceiver.hpp
src/includes/objects/: Makefile.am  Makefile.in  caccount.h  caccount.hpp  cbody.h  cbody.hpp  cchar.h  cchar.hpp  cclient.h  ceventthrower.h  ceventthrower.hpp  citem.h  citem.hpp  cnpc.h  cnpc.hpp  cobject.h  cobject.hpp  cparty.h  cparty.hpp  cpc.h  cpc.hpp  cserializable.h  cserializable.hpp  csocket.h  misc.h
src/includes/packets/: misccommand.h  received.h  sent.h
src/includes/skills/: Makefile.am  Makefile.in  alchemy.hpp  begging.h  begging.hpp  extractionskills.h  extractionskills.hpp  fishing.h  fishing.hpp  music.hpp  skills.h  skills.hpp
src/libhypnos/: Makefile.am  Makefile.in  cvariant.cpp  mmappedfile.cpp  prefix.c  strings.cpp
src/libhypnos/libhypnos/: Makefile.am  Makefile.in  commons.h  commons.hpp  cvariant.h  cvariant.hpp  exceptions.h  exceptions.hpp  mmappedfile.h  prefix.hpp  strings.h  strings.hpp  types.h  types.hpp
src/libhypnos/muls/: Makefile.am  Makefile.in  cliloc.cpp  gumpidx.cpp  indexedfile.cpp  mmappedfile.cpp  mulfiles.cpp  multi.cpp  multiidx.cpp  tiledata.cpp
src/m4/: checkflags.m4  dl.m4  hypnosreloc.m4  icc.m4  pch.m4  stdints.m4  wefts.m4  windows.m4
src/makefiles/: Makefile.inc  Makefile.linux  Makefile.linux.inc  Makefile.mingw  Makefile.mingw.inc  Makefile.xmingw32
src/scripts/: apidocs.sh  crosscompile.sh  greplace.sh  replace.sh  search.sh
src/src/: .cvsignore  Makefile  Makefile.am  Makefile.in  area.cpp  basics.cpp  calendar.cpp  clock.cpp  common_libs.cpp  console.cpp  data.cpp  database.cpp  dbl_single_click.cpp  debug.cpp  dirs.cpp  dragdrop.cpp  effects.cpp  encryption.cpp  gamedate.cpp  gmpages.cpp  hypnos.cpp  logsystem.cpp  magic.cpp  mainloop.cpp  map.cpp  menu.cpp  misc.cpp  network.cpp  newbies.cpp  npcai.cpp  npcs.cpp  oldmenu.cpp  packets.cpp  particles.cpp  pointer.cpp  poll.cpp  range.cpp  rcvpkg.cpp  regions.cpp  remadmin.cpp  (+18 more)
src/src/abstraction/: Makefile  endian.cpp
src/src/archetypes/: Makefile.am  Makefile.in  items.cpp
src/src/archs/: Makefile  Makefile.am  Makefile.in  console.cpp  daemon.cpp  hypunix.cpp  hypwin32.cpp  ntservice.cpp  signals.cpp  tinterface.cpp  win32registry.cpp
src/src/backend/: Makefile  Makefile.am  Makefile.in  admincmds.cpp  notify.cpp  scheduler.cpp  scripting.cpp  sqlite.cpp  strconstants.cpp
src/src/encryption/: Makefile  Makefile.am  Makefile.in  clientcrypt.cpp  crypt.cpp
src/src/extras/: .cvsignore  Makefile  Makefile.am  Makefile.in  bounty.cpp  jails.cpp  loginserver.cpp  motd.cpp  msgboard.cpp
src/src/networking/: Makefile.am  Makefile.in  cclient.cpp  csocket.cpp  huffman.cpp  misccommand.cpp  network.cpp  received.cpp  remadmin.cpp  sent.cpp  tUOReceiver.cpp  tkiller.cpp  tkilling.cpp  tlistening.cpp  tpllistener.cpp  tracreceiver.cpp  treceiving.cpp  tuoreceiver.cpp
src/src/objects/: Makefile  Makefile.am  cbody.cpp  (+13 more)
src/utils/: Makefile.am  Makefile.in
(+188 files in other folders)
